--- a/CSS/style.css
+++ b/CSS/style.css
@@ -154,64 +154,63 @@
 }
 
 .comentarios-exalunos h1 {
-    
     color: #009688;
     padding-bottom: 100px;
     font-size: 50px;
 }
 
 .personagens {
+    display: flex;
     position: absolute;
-    padding-top: 10px;
-    padding-left: 90px;
-    padding-bottom: 100px;
 }
 
 .personagens2 {
-    position: absolute;
-    padding-top: 205px;
-    padding-left: 90px;
-    padding-bottom: 100px;
+    padding-left: 800px;
+    display: flex;
+    
 }
 
 .personagens3 {
-    padding-left: 950px;
-    padding-bottom: 100px;
+    display: flex;
+    position: absolute;
+    padding-top: 100px;
 }
 
-#personagen{
-    border: 2px solid;
-    border-radius: 50%;
-    color: #FF4081;
-    position: absolute;
+.personagens4 {
+    padding-left: 800px;
+    display: flex;
+    padding-top: 100px;
+    margin-bottom: 100px;
+}
+
+#personagen {
+   border: 2px solid #FF4081;
+   border-radius: 50px;
 
 }
 
 #comentario {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
-    padding-left: 120px;
     padding-top: 30px;
-    margin-right: 1100px;
-
+    padding-left: 15px;
+    margin-right: 1000px;
 }
 
 #comentario2 {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
-    padding-left: 120px;
     padding-top: 30px;
-    margin-right: 150px;
+    padding-left: 15px;
+    margin-right: 200px;
 }
 
 #idade {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
-    padding-top: 10px;
+    padding-top: 80px;
     padding-left: 120px;
+    position: absolute;
 }
 
 #idade2 {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
-    padding-top: 10px;
+    padding-top: 80px;
     padding-left: 120px;
+    position: absolute;
 }
 
 
@@ -276,7 +275,7 @@
 /* FINAL RODA PÉ */
 
 .logo2 {
-    margin-top: 890px;
+    margin-top: 990px;
     padding-bottom: 170px;
     padding-top: 70px;
     position: relative;
