Adicionando link para index.html à logo superior da página

--- a/CSS/curso.css
+++ b/CSS/curso.css
@@ -18,6 +18,11 @@ header {
 
 }
 
+header a {
+    color: #fff;
+    text-decoration: none;
+}
+
 .logo {
     display: flex;
     justify-content: space-between;
