--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -1,58 +1,49 @@
-* {
+*  {
+    padding: 0;
     margin: 0;
- }
- 
-    /* MENU */
- 
- .logo {
-     padding-top: 20px;
-     padding-left: 82px;
-     padding-bottom: 40px;
-     background-color: #2E948A;
-     margin-bottom: 40px;
-     box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.25);
- }
- 
- .logo img {
-     position: absolute;
- }
-
- 
-#linkpageinicio {
-    color: white;
-    text-decoration: none;
+    box-sizing: border-box;
+    font-family: 'Ubuntu', sans-serif;
 }
 
- .dindin {
-     position: absolute;
-     font-family: Arial, Helvetica, sans-serif;
-     font-size: 30px;
-     padding-left: 80px;
-     padding-top: 10px; 
- }
+    /* MENU */
  
- .menu {
-     padding-left: 1270px;
-     padding-top: 33px; 
- }
- 
- .opcao-menu {
-     gap: 35px;
-     font-size: 20px;
-     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
-     list-style: none;
-     display: flex;
- }
- 
- .opcao-menu li a {
-     color: white;
-     text-decoration: none;
- }
- 
- .opcao-menu li a:hover {
-     transition: 400ms;
-     color: #FF4081;
- }
+    header {
+        height: 117px;
+        background-color: #2E948A;
+        color: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.25);
+    }
+    header a {
+        color: #fff;
+        text-decoration: none;
+    }
+    .logo {
+        display: flex;
+        justify-content: space-between;
+        padding-left: 82px;
+    }
+    .dindin {
+        font-size: 30px;
+    }
+    .opcao-menu {
+        display: flex;
+        gap: 35px;
+        font-size: 20px;
+        list-style: none;
+        align-items: end;
+        padding-right: 103px;
+    }
+    .opcao-menu li a {
+        color: white;
+        text-decoration: none;
+    }
+    .opcao-menu li a:hover {
+        transition: 400ms;
+        color: #FF4081;
+    }
 
   /* MAIS CONTEÚDO */
 
@@ -61,7 +52,6 @@
     padding-left: 200px;
     padding-top: 90px;
     margin-right: 900px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
     position: absolute;
 }
 
@@ -97,7 +87,6 @@
 
 .blocos-cinza {
     padding-top: 100px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
 }
 
 #titulo-abaixo {
@@ -112,79 +101,76 @@
 
 /* RODA PÉ */
 
-.logo2 {
-    padding-bottom: 170px;
-    padding-top: 70px;
-    position: relative;
+footer {
     background-color: #2E948A;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+    color: #fff;
+    height: 207px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 137px 0 128px;
 }
-
-.logo2 img {
-    padding-left: 200px;
-    position: absolute;
-    
+.logo-footer {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
 }
-
-.dindin2 {
-    position: absolute;
-    color: white;
-    padding-left: 340px;
-    padding-top: 20px;
-    font-size: 50px;
-}
-
-#edufin {
-    position: absolute;
-    color: white;
-    padding-left: 340px;
-    padding-top: 80px;
-    font-size: larger;
-}
-
-.menu2 {
-    position: absolute;
-    padding-left: 750px;
-    padding-top: 30px;
-}
-
-.opcao-menu2 {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
-    color: white;
-    list-style: none;
-}
-
-.opcao-menu2 li{
-    padding-bottom: 10px;
-}
-
-.contato {
-    position: absolute;
-    padding-left: 1400px;
-    padding-top: 10px;
-    font-size: 30px;
-}
-
-.contato-opcao li {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
-    color: white;
-    list-style: none;
-    border: 2px solid;
+.logo-footer-text {
+    display: flex;
+    flex-direction: column;
     padding-left: 20px;
-    padding-right: 20px;
-    border-radius: 60px;
-    text-align: center;
-    margin-bottom: 20px;
 }
-
-.contato-opcao li a {
-    color: white;
+.logo-footer-text h1 {
+    font-weight: 500px;
+    font-size: 66px;
+    height: 66px;
+}
+.logo-footer-text p {
+    height: 22px;
+    font-weight: 300px;
+    font-size: 22px;
+}
+.menu2 {
+    margin-left: 183px;
+}
+.opcao-menu2 {
+    list-style: none;
+}
+.opcao-menu2 a {
     text-decoration: none;
+    color: #fff;
 }
-
-.contato-opcao li a:hover {
+.opcao-menu2 li {
+    font-size: 20px;
+    padding-bottom: 10px;
+    font-weight: 400;
+    line-height: 23px;
+}
+.opcao-menu2 li:hover {
     transition: 400ms;
     color: #FF4081;
 }
-
+.contato {
+    margin-left: 320px;
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+    font-weight: 400;
+    gap: 13px;
+}
+.contato button {
+    background-color: #2E948A;
+    border: 2px solid;
+    font-size: 20px;
+    font-weight: 400;
+    width: 289px;
+    height: 51px;
+    line-height: 23px;
+    border-radius: 50px;
+    color: #F6F6F6;
+}
+.contato button:hover {
+    transition: 400ms;
+    color: #FF4081;
+}
 
